@@ -19,6 +19,7 @@
 	* fix uTP edge case where udp socket buffer fills up
 	* fix nagle implementation in uTP
 
+	* improve handling of filenames that are invalid on windows
 	* support 'implied_port' in DHT announce_peer
 	* don't use pool allocator for disk blocks (cache may now return pages to the kernel)
 
